--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+- Tests!
+
 - Optmize retrieval: map[key][]string so that words are in equivalence
   classes by key and we only iterate over keys. There's an even furthe
   optimization of sorting the keys and then doing a binary search for
